Fix album list on small devices, seekbar, scroller

--- a/src/Album/Album.css
+++ b/src/Album/Album.css
@@ -141,7 +141,13 @@ header h2 {
     margin-left: 50px;
   }
   .headerOuter {
-    height: 300px;
+    height: 350px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .info .btnrow {
+    margin: auto;
   }
   .closeBtn {
     left: -10px;
